<resources>
    <string name="app_name">Admitly</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="wechat">WeChat</string>
    <string name="google">Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="who_are_you">Who Are You?</string>
    <string name="my_information">My Information</string>
    <string name="country">Country</string>
    <string name="enter">Enter</string>
    <string name="school">School</string>
    <string name="year">Year</string>
    <string name="major">Major</string>
    <string name="gpa">GPA</string>
    <string name="test">Test</string>
    <string name="test_name">Test Name</string>
    <string name="score">Score</string>
    <string name="add_more_test">Add more test</string>
    <string name="dream_school">Dream School</string>
    <string name="add_more_dream_school">Add more dream school</string>
    <string name="post_project">Post Project</string>
    <string name="i_need_services">I Need Services</string>
    <string name="post_my_project">Post My Project</string>
    <string name="school_major_matching">School/Major Matching</string>
    <string name="essay_editing">Essay Editing</string>
    <string name="welcome_to">Welcome to</string>
    <string name="admitly">Admitly</string>
    <string name="yyyy">YYYY</string>
    <string name="school_name">School Name</string>
    <string name="occupation">Occupation</string>
    <string name="linkedin_link">Linkedin Link</string>
    <string name="url">Url</string>
    <string name="my_services">My Services</string>
    <string name="service">Service</string>
    <string name="years_of_experience">Years Of Experience</string>
    <string name="price">Price</string>
    <string name="_0">0</string>
    <string name="hourly_fixed">Hourly/Fixed</string>
    <string name="add_more_service">Add More Service</string>
    <string name="finish">Finish</string>
    <string name="service_name">Service Name</string>
    <string name="submit">Submit</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">New Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="conti_nue">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="explore">Explore</string>
    <string name="project">Project</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="explore_counselor">Explore \nCounselor</string>
    <string name="search_counselor">Search Counselor</string>
    <string name="experience">Experience</string>
    <string name="apply">Apply</string>
    <string name="projects">Projects</string>
    <string name="current_projects">Current Projects</string>
    <string name="amet_minim_mollit_non_deserunt_ullamco_est_sit_aliqua_dolor_do_amet_sint">Amet minim mollit non deserunt ullamco\nest sit aliqua dolor do amet sint.</string>
    <string name="_202_87">$202.87</string>
    <string name="more">More</string>
    <string name="major_applying_for_dream_school">Major Applying for\nDream School</string>
    <string name="robert_fox">Robert Fox</string>
    <string name="proposals">Proposals</string>
    <string name="filter">Filter</string>
    <string name="past_projects">Past Projects</string>
    <string name="hire_counselor">Hire Counselor</string>
    <string name="major_applying_for_dream_school_2">Major Applying for Dream School</string>
    <string name="guy_hawkins">Guy Hawkins</string>
    <string name="poland">Poland</string>
    <string name="_3_6">3.6</string>
    <string name="_5_years">5 years</string>
    <string name="hire">Hire</string>
    <string name="payment_method">Payment Method</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_projects">Explore Projects</string>
    <string name="search_projects">Search Projects</string>
    <string name="my_proposed_service">My Proposed Service</string>
    <string name="cover_letter">Cover Letter</string>
    <string name="write_here">Write here...</string>
    <string name="proposal">Proposal</string>
    <string name="my_proposals">My Proposals</string>
    <string name="withdraw">Withdraw</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="earnings">Earnings</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="swift_code">Swift Code</string>
    <string name="account_number">Account Number</string>
    <string name="bank_name">Bank Name</string>
    <string name="add">Add</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="payment_successfully_withdraw">Payment\nSuccessfully Withdraw</string>
    <string name="search">Search</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="name">Name</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="expired">Expired</string>
    <string name="mm_yyyy">MM/YYYY</string>
    <string name="review_counselor">Review Counselor</string>
    <string name="notes">Notes</string>
    <string name="send_review">Send Review</string>
    <string name="competency">Competency</string>
    <string name="professionalism">Professionalism</string>
    <string name="responsiveness">Responsiveness</string>
    <string name="are_you_sure_you_want_to_release_the_payment">Are you sure\nYou want to release\nthe payment?</string>
    <string name="payment_successfully_released">Payment\nSuccessfully Released</string>
    <string name="save">Save</string>
</resources>