<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.student.AddPaymentMethodActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey95">
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_90"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_34"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/sp_16"
                android:layout_marginTop="@dimen/dp_2"
                android:layout_marginStart="@dimen/dp_30"
                android:src="@drawable/back_btn" />
            <TextView
                android:id="@+id/mySer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_14"
                android:fontFamily="@font/inter"
                android:text="@string/add_payment_method"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_1"
            style="@style/HeadingTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/card_holder_name"
            app:layout_constraintTop_toBottomOf="@id/view1"
            app:layout_constraintStart_toStartOf="parent" />
        <EditText
            android:id="@+id/card_holder_name_et"
            style="@style/InformationEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:hint="@string/name"
            app:layout_constraintTop_toBottomOf="@id/tv_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/tv_2"
            style="@style/HeadingTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            app:layout_constraintTop_toBottomOf="@id/card_holder_name_et"
            app:layout_constraintStart_toStartOf="parent" />
        <EditText
            android:id="@+id/card_number_et"
            style="@style/InformationEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:hint="**** ****  ****  0000"
            android:maxLength="16"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/tv_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <LinearLayout
            android:id="@+id/lin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/card_number_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/calypso"
                    android:text="@string/expired" />
                <EditText
                    android:id="@+id/expired_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:layout_marginTop="@dimen/dp_15"
                    android:fontFamily="@font/inter"
                    android:padding="@dimen/dp_10"
                    android:textSize="@dimen/sp_16"
                    android:inputType="date"
                    android:textColor="@color/black"
                    android:textColorHint="@color/ocean_buble"
                    android:background="@drawable/edit_input_radius"
                    android:hint="@string/mm_yyyy"
                    />
            </LinearLayout>
            <View
                android:layout_width="@dimen/dp_15"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/calypso"
                    android:text="@string/cvv" />
                <EditText
                    android:id="@+id/cvv_et"
                    android:layout_width="@dimen/dp_110"
                    android:layout_height="@dimen/dp_45"
                    android:layout_marginTop="@dimen/dp_15"
                    android:maxLength="3"
                    android:fontFamily="@font/inter"
                    android:padding="@dimen/dp_10"
                    android:textSize="@dimen/sp_16"
                    android:inputType="numberPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/ocean_buble"
                    android:background="@drawable/edit_input_radius"
                    android:hint="***"
                    />
            </LinearLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_card_btn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/lin2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>