<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.comman.SignInActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="true"
        android:background="@color/grey95">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_120"
                    android:layout_marginTop="@dimen/dp_69"
                    android:layout_marginStart="@dimen/dp_12"
                    android:src="@drawable/admitly_logo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView
                    android:id="@+id/welcomeTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_30"
                    android:textSize="32sp"
                    android:text="@string/welcome_to"
                    android:textColor="@color/dark_charcoal"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter"
                    app:layout_constraintTop_toBottomOf="@id/logo"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <TextView
                    android:id="@+id/signIn_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginStart="@dimen/dp_30"
                    android:textSize="@dimen/sp_24"
                    android:text="@string/admitly"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter"
                    app:layout_constraintTop_toBottomOf="@id/welcomeTo"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <EditText
                    android:id="@+id/email_signIn"
                    style="@style/RegistrationEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:layout_marginTop="@dimen/dp_25"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintTop_toBottomOf="@id/signIn_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <EditText
                    android:id="@+id/password_signIn"
                    style="@style/RegistrationEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    app:layout_constraintTop_toBottomOf="@id/email_signIn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_30"
                    android:text="@string/forgot_password"
                    android:layout_marginTop="@dimen/dp_15"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/calypso"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintTop_toBottomOf="@id/password_signIn"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signInBtn"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:layout_marginTop="@dimen/dp_30"
                    android:text="@string/sign_in"
                    app:layout_constraintTop_toBottomOf="@id/forgot_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <TextView
                    android:id="@+id/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:fontFamily="@font/inter"
                    android:text="@string/or"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/grey74"
                    app:layout_constraintTop_toBottomOf="@id/signInBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <LinearLayout
                    android:id="@+id/l2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/or"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:weightSum="2">
                    <ImageView
                        android:id="@+id/google_signIn_btn"
                        android:layout_width="@dimen/dp_60"
                        android:layout_height="@dimen/dp_60"
                        android:layout_marginStart="@dimen/dp_10"
                        android:src="@drawable/google"/>
                    <ImageView
                        android:layout_width="@dimen/dp_60"
                        android:layout_height="@dimen/dp_60"
                        android:layout_marginStart="@dimen/dp_10"
                        android:src="@drawable/wechat" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_30"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/l2"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:textSize="@dimen/sp_14"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/black"/>
                    <TextView
                        android:id="@+id/dont_have_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:fontFamily="@font/inter"
                        android:textSize="@dimen/sp_14"
                        android:text="@string/sign_up"
                        android:textColor="@color/green"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>
