<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.counselor.ProposalToStudentActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey95">
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_90"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_34"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/back_btn1"
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/sp_16"
                android:layout_marginTop="@dimen/dp_2"
                android:layout_marginStart="@dimen/dp_30"
                android:src="@drawable/back_btn" />
            <TextView
                android:id="@+id/mySer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_14"
                android:fontFamily="@font/inter"
                android:text="@string/proposal"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </LinearLayout>
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:fontFamily="@font/inter"
            android:text="@string/major_applying_for_dream_school_2"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/view1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/inter"
            android:text="@string/my_proposed_service"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/text1"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/pr1"
            style="@style/HeadingTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintTop_toBottomOf="@id/text2"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/ln1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginHorizontal="@dimen/dp_30"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/pr1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <EditText
                android:id="@+id/price_amount_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_weight="5"
                android:fontFamily="@font/inter"
                android:padding="@dimen/dp_10"
                android:textSize="@dimen/sp_16"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/ocean_buble"
                android:background="@drawable/edit_input_radius"
                android:hint="@string/_0"
                />
            <View
                android:layout_width="@dimen/dp_15"
                android:layout_height="match_parent"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cons2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                app:layout_constraintTop_toBottomOf="@id/ser1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_weight="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/black"
                    android:textColorHint="@color/ocean_buble"
                    android:fontFamily="@font/inter"
                    android:padding="@dimen/sp_10"
                    android:background="@drawable/edit_input_radius"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <Spinner
                    android:id="@+id/hourly_fixed_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/text3"
            style="@style/HeadingTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cover_letter"
            app:layout_constraintTop_toBottomOf="@id/ln1"
            app:layout_constraintStart_toStartOf="parent"/>
        <EditText
        android:id="@+id/cover_letter_et"
        style="@style/InformationEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_118"
        android:hint="@string/write_here"
            android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/text3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_btn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_25"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@id/cover_letter_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>