<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.comman.UpdatePasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey95">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_90"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="parent"/>
            <LinearLayout
                android:id="@+id/lin1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_34"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/forgetBack"
                    android:layout_width="@dimen/dp_16"
                    android:layout_height="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_30"
                    android:src="@drawable/back_btn" />
                <TextView
                    android:id="@+id/mySer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_14"
                    android:fontFamily="@font/inter"
                    android:text="@string/update_password"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    android:textColor="@color/black" />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_newPassword"
                style="@style/HeadingTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_157"
                android:text="@string/password"
                app:layout_constraintTop_toBottomOf="@id/view1"
                app:layout_constraintStart_toStartOf="parent" />
            <EditText
                android:id="@+id/et_newPassword"
                style="@style/InformationEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/tv_newPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

                <TextView
                    android:id="@+id/tv_cPassword"
                    style="@style/HeadingTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_password"
                    app:layout_constraintTop_toBottomOf="@id/et_newPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <EditText
                    android:id="@+id/et_cNewPassword"
                    style="@style/InformationEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:hint="@string/conf_password"
                    android:inputType="textPassword"
                    app:layout_constraintTop_toBottomOf="@id/tv_cPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/updatePassSubmitBtn"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginTop="@dimen/dp_25"
                android:text="@string/submit"
                app:layout_constraintTop_toBottomOf="@id/et_cNewPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>